--- a/Demo/index.html
+++ b/Demo/index.html
@@ -3,12 +3,14 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>
-      Hello This is Yejin!
+    DEMO PAGE
     </title>
   </head>
   <body>
-    I'm glad to meet youuuuuuu
-    <img src="https://live.staticflickr.com/65535/47587831182_f3a78a8453_b.jpg" alr="pinkmoon" id="project1>>
-    <p style="font-size: 0.9rem;font-style: italic;"><a href="https://www.flickr.com/photos/111245738@N08/47587831182">"Pink Moon"</a><span> by <a href="https://www.flickr.com/photos/111245738@N08">ruifo</a></span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-SA 2.0</a><a href="https://creativecommons.org/licenses/by-nc-sa/2.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=6491a307-446d-428d-8f6f-6cf05b8accfc" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-sa_icon.svg" /></a></p>
+  lorem ipsumd dflasjdflkjsd;flkjds;fljsd;flkjasd;lfj;alsdjf;kj
+    <a href="project1.html">
+    <img src="https://live.staticflickr.com/3342/3278868063_5fed8cfc64_b.jpg" alt="close-up photo of hourglass" id="project1">
+    </a>
+    <p style="font-size: 0.9rem;font-style: italic;"><a href="https://www.flickr.com/photos/22244945@N00/3278868063">"hourglass 1"</a><span> by <a href="https://www.flickr.com/photos/22244945@N00">graymalkn</a></span> is licensed under <a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY 2.0</a><a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a></p>
   </body>
 </html>
